devel
-----

* Fixed some situations of
  [...]
  SUBQUERY
  FILTER
  LIMIT
  [...]
  in AQL queries, yielding incorrect responses. A distributed
  state within the subquery was not resetted correctly.
  This could also lead into "shrink" errors of AQL item blocks,
  or much higher query runtimes.
  Fixes:
  - BTS-252
  - ES-687
  - github issue: #13099
  - github issue: #13124
  - github issue: #13147
  - github issue: #13305
  - DEVSUP-665

* Added metric `arangodb_server_statistics_cpu_cores` to provide the number of
  CPU cores visibile to the arangod process. This is the number of CPU cores
  reported by the operating system to the process.
  If the environment variable `ARANGODB_OVERRIDE_DETECTED_NUMBER_OF_CORES` is
  set to a positive value at instance startup, this value will be returned
  instead.


* `COLLECT WITH COUNT INTO x` and `COLLECT var = expr WITH COUNT INTO x` are now
  internally transformed into `COLLECT AGGREGATE x = LENGTH(null)` and
  `COLLECT var = expr AGGREGATE x = LENGTH(null)` respectively. This not only
  simplified the code, but also allows more query optimizations:
    - If the variable in `COLLECT WITH COUNT INTO var` is not used, the implicit
      aggregator is now removed.
    - All queries of the form `COLLECT AGGREGATE x = LENGTH(_)` are now executed
      using the count executor, which can result in significantly improved
      performance.

* Minor and rare AQL performance improvement, in nested subqueries:
  LET sq1 ([..] FILTER false == true LET sq2 = (<X>) [..])
  where sq1 produces no data (e.g. by the above filter) for sq2,
  the part <X> have been asked two times (second returns empty result),
  instead of one, if and only if the mainquery executes sq1 exactly one time.
  Now we get away with one call only.
  In the case sq1 has data, or sq1 is executed more often, only one call was needed
  (assuming the data fits in one batch).

* Updated OpenSSL to 1.1.1i and OpenLDAP to 2.4.56.
