@@ -149,9 +149,14 @@ bool TRI_ShouldFailDebugging(char const* value) {
 
 /// @brief add a failure point
 void TRI_AddFailurePointDebugging(char const* value) {
-  WRITE_LOCKER(writeLocker, ::failurePointsLock);
+  bool added = false;
+  {
+    WRITE_LOCKER(writeLocker, ::failurePointsLock);
 
-  if (::failurePoints.emplace(value).second) {
+    added = ::failurePoints.emplace(value).second;
+  }
+
+  if (added) {
     LOG_TOPIC("d8a5f", WARN, arangodb::Logger::FIXME)
         << "activating intentional failure point '" << value
         << "'. the server will misbehave!";
